external ca for kafka listener

--- a/charts/kafka/templates/kafka.yaml
+++ b/charts/kafka/templates/kafka.yaml
@@ -32,6 +32,11 @@ spec:
           tlsTrustedCertificates:
             - secretName: kafka-listener-cert
               certificate: ca.crt
+        configuration:
+          brokerCertChainAndKey:
+            secretName: kafka-listener-cert
+            certificate: tls.crt
+            key: tls.key
     version: 3.7.0
     replicas: 3
     metricsConfig:
