--- a/charts/kafka/templates/opa-server.yaml
+++ b/charts/kafka/templates/opa-server.yaml
@@ -59,96 +59,52 @@ metadata:
   name: opa-policies
 data:
   kafka-auth-policy.rego: |
-    package kafka.authz
+    package kafka
+
+    import rego.v1
 
     default allow = false
 
-    allow {
+    principals = {
+        "platform-admin": {
+            "admin": true
+        },
+        "mirrormaker": {
+            "topicAdmin": true
+        },
+        "test-app-b": {
+            "reads": ["test-app-a.orders", "test-app-a.favorites"]
+        }
+    }
+
+    allow if {
         not deny
     }
 
-    deny {
-        not allow_consumer_group
-        not allow_producer_group
-        not allow_admin_group
+    deny if {
+        not allow_admins
+        not allow_topic_admins
+        not allow_resource_owner
+        not allow_guest_reader
     }
 
-    allow_consumer_group {
-        is_consumer_operation
-        is_consumer_group
+    allow_admins if {
+        principals[input.session.sanitizedUser].admin
     }
 
-    allow_producer_group {
-        is_producer_operation
-        is_producer_group
+    allow_topic_admins if {
+        input.resource.resourceType.name == "Topic"
+        principals[input.session.sanitizedUser].topicAdmin
     }
 
-    allow_admin_group {
-        is_admin_operation
-        is_admin_group
+    allow_resource_owner if {
+        ownedResourceTypes := {"Topic", "Group"}
+        ownedResourceTypes[_] == input.resource.resourceType.name
+        startswith(input.resource.resourceName, input.session.sanitizedUser)
     }
 
-    ###############################################################################
-    # Groups and their helper rules
-    ###############################################################################
-
-    consumer_group = ["tom", "tyrone", "matt", "pepe", "douglas"]
-    producer_group = ["jack", "conor", "keinan", "john"]
-    admin_group = ["dean", "christian"]
-
-    is_consumer_group {
-        consumer_group[_] == principal.name
-    }
-
-    is_producer_group {
-        producer_group[_] == principal.name
-    }
-
-    is_admin_group {
-        admin_group[_] == principal.name
-    }
-
-    ###############################################################################
-    # Operations and their helper rules
-    ###############################################################################
-
-    consumer_operations = {
-                            "Topic": ["Read", "Describe"], 
-                            "Group": ["Read", "Describe"]
-                        }
-
-    producer_operations = {
-                            "Topic": ["Write", "Describe"]
-                        }
-
-    admin_operations = {
-                        "Topic": ["Read", "Write", "Create", "Delete", "Alter", "Describe", "ClusterAction", "DescribeConfigs", "AlterConfigs"], 
-                        "Group": ["Read", "Delete", "Describe"],
-                        "Cluster": ["Create", "Alter", "Describe", "ClusterAction", "DescribeConfigs", "AlterConfigs"]
-                        }
-
-    is_consumer_operation {
-        consumer_operations[input.resource.resourceType.name][_] == input.operation.name
-    }
-
-    is_producer_operation {
-        producer_operations[input.resource.resourceType.name][_] == input.operation.name
-    }
-
-    is_admin_operation {
-        admin_operations[input.resource.resourceType.name][_] == input.operation.name
-    }
-
-    ###############################################################################
-    # Helper rules for input processing
-    ###############################################################################
-
-    principal = {"fqn": parsed.CN, "name": cn_parts[0]} {
-        parsed := parse_user(urlquery.decode(input.session.sanitizedUser))
-        cn_parts := split(parsed.CN, ".")
-    }
-
-    parse_user(user) = {key: value |
-        parts := split(user, ",")
-        [key, value] := split(parts[_], "=")
+    allow_guest_reader if {
+        input.resource.resourceType.name == "Topic"
+        input.operation.name == "Read"
+        principals[input.session.sanitizedUser].reads[_] == input.resource.resourceName
     }
