simplify backstage realm

--- a/charts/keycloak/templates/realm-backstage.yaml
+++ b/charts/keycloak/templates/realm-backstage.yaml
@@ -139,7 +139,7 @@ spec:
       groups:
       - "/operators"
     scopeMappings: []
-    clientScopeMappings: []
+    clientScopeMappings: {}
     clients:
     - clientId: "{{ .Values.keycloak.backstageClient.id }}"
       enabled: true
